[BUGFIX] Add border on whole cropper face
The cropper face, indicating the current image sub-part used when
processing the image, now has a border around the whole canvas and not
only around the orientation markers, whose 50% transparency has been
removed as well.

The `opacity` of the cropper face is replaced with a background color
utilizing the alpha channel to make the border around the whole cropper
face visible.

Resolves: #105831
Releases: main, 13.4
Reviewed-on: https://review.typo3.org/c/Packages/TYPO3.CMS/+/87509
Tested-by: Jasmina Ließmann <minapokhalo+typo3@gmail.com>
Tested-by: core-ci <typo3@b13.com>
Tested-by: Oliver Bartsch <bo@cedev.de>

--- a/typo3/sysext/backend/Resources/Public/Css/backend.css
+++ b/typo3/sysext/backend/Resources/Public/Css/backend.css
@@ -3038,11 +3038,11 @@ select-pure{--typo3-form-selectpure-border-radius:var(--typo3-input-border-radiu
 .cropper-drag-box{background-color:#fff;opacity:0}
 .cropper-modal{background-color:#000;opacity:.5}
 .cropper-view-box{display:block;height:100%;width:100%;overflow:hidden;outline:1px solid #69f;outline-color:rgba(102,153,255,.75)}
-.cropper-dashed{position:absolute;display:block;border:0 dashed #fff;opacity:.5}
+.cropper-dashed{position:absolute;display:block;border:0 dashed #fff}
 .cropper-dashed.dashed-h{top:33.3333333333%;left:0;width:100%;height:33.3333333333%;border-top-width:1px;border-bottom-width:1px}
 .cropper-dashed.dashed-v{top:0;left:33.3333333333%;width:33.3333333333%;height:100%;border-right-width:1px;border-left-width:1px}
-.cropper-face,.cropper-line,.cropper-point{position:absolute;display:block;opacity:.1;height:100%;width:100%}
-.cropper-face{top:0;left:0;cursor:move;background-color:#fff}
+.cropper-face,.cropper-line,.cropper-point{position:absolute;display:block;height:100%;width:100%}
+.cropper-face{top:0;left:0;cursor:move;background-color:rgba(255,255,255,.1)}
 .cropper-line{background-color:#69f}
 .cropper-line.line-e{top:0;right:-3px;width:5px;cursor:e-resize}
 .cropper-line.line-n{top:-3px;left:0;height:5px;cursor:n-resize}
@@ -3752,7 +3752,8 @@ typo3-backend-color-picker .form-control{padding-inline-start:2.5rem}
 .collapse-horizontal.show{display:inline-block;width:auto}
 .collapse-horizontal.collapsing{display:inline-block;transition-property:width,visibility;width:0}
 .cropper .cropper-line{background-color:transparent}
-.cropper .cropper-dashed{border:1px dashed var(--typo3-state-primary-bg)}
+.cropper .cropper-face{border:1px dashed var(--typo3-state-primary-bg)}
+.cropper .cropper-dashed{border-color:var(--typo3-state-primary-bg)}
 .cropper .cropper-point{background-color:var(--typo3-state-primary-bg)}
 .cropper .cropper-point.point-nw{left:0;top:0}
 .cropper .cropper-point.point-w{left:0}
